# issue-triage-agent

./: .gitignore  README.md  pyproject.toml
.agents/rules/: git_commit.md
agent/: README.md  agents-cli-manifest.yaml  deployment_metadata.json  pyproject.toml
agent/app/: agent.py  agent_runtime_app.py  fast_api_app.py
agent/deployment/terraform/cicd/: telemetry.tf  variables.tf
agent/deployment/terraform/cicd/vars/: env.tfvars
agent/deployment/terraform/single-project/: telemetry.tf  variables.tf
agent/tests/eval/evalsets/: basic.evalset.json
agent/tests/integration/: test_agent.py  test_agent_runtime_app.py
agent/tests/unit/: test_explanation_fallback.py  test_feedback.py
app/app_utils/: telemetry.py  typing.py
deployment/terraform/cicd/: variables.tf
deployment/terraform/single-project/vars/: env.tfvars
logs-mcp/: .gcloudignore  Dockerfile  README.md  deploy.sh  main.py  pyproject.toml  server.py  test_server.py
prototype-memory-agent/: README.md  agents-cli-manifest.yaml  deployment_metadata.json  pyproject.toml
prototype-memory-agent/app/: agent.py  fast_api_app.py
prototype-memory-agent/app/app_utils/: telemetry.py  typing.py
prototype-memory-agent/deployment/terraform/single-project/: variables.tf
prototype-memory-agent/deployment/terraform/single-project/vars/: env.tfvars
ref/: vertex-ai-agent.yml
