[project]
name = "logs-mcp"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for simulated storage cluster metrics and log streaming"
authors = [
    {name = "Antigravity AI", email = "antigravity@example.com"},
]
dependencies = [
    "mcp>=1.2.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
]
requires-python = ">=3.11,<3.14"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["main.py"]

